--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
         <title>Chareese's Binding</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="reset.css" rel="stylesheet">
-		<link href="style.css" rel="common.css">
+		<link href="common.css" rel="stylesheet">
     </head>
     <body>
         <h1>Hello World!</h1>
+        <nav>
+            <ol>
+                <li><a href="direction-1/index.html">Direction 1</a></li>
+                <li><a href="direction-2/index.html">Direction 2</a></li>
+                <li><a href="direction-3/index.html">Direction 3</a></li>
+            </ol>
+        </nav>
     </body>
 </html>
