--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chareese's Binding</title>
+        <title>Binding</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="reset.css" rel="stylesheet">
 		<link href="common.css" rel="stylesheet">
     </head>
     <body>
-        <h1>Hello World!</h1>
         <nav>
             <ol>
                 <li><a href="direction-1/index.html">Direction 1</a></li>
                 <li><a href="direction-2/index.html">Direction 2</a></li>
                 <li><a href="direction-3/index.html">Direction 3</a></li>
+                <!-- Dropdown menu tutorial I found on Youtubehttps://www.youtube.com/watch?v=VQWu4e6agPc -->
             </ol>
         </nav>
+        <h1>Binding</h1>
+        <footer>
+            <small>Designed by Chareese Lam</small>
+        </footer>
     </body>
 </html>
