setting up direction 1

--- a/direction-2/index.html
+++ b/direction-2/index.html
@@ -17,7 +17,8 @@
                         <li><a href="../direction-3/index.html">Direction 3</a></li>
                     </ol>
                 </nav>
-				<h1>Gradients: the colorful design trend aiming to soothe these anxious times</h1>
+				<h1>Gradients</h1>
+				<h2>The colorful design trend aiming to soothe these anxious times</h2>
 				<!-- <nav>
 					<a href="https://medium.com/google-design/everyday-color-theory-59c1ca0770cb" class="scroll-button1">Article</a>
 					<a href="#response" class="scroll-button2">Response</a>
