--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         </nav>
         <h1>Binding</h1>
         <footer>
-            <small>Designed by Chareese Lam</small>
+            <small>Designed by Chareese Lam ✽</small>
+            <!--https://coolsymbol.com/-->
         </footer>
     </body>
 </html>
