small updates everywhere

--- a/direction-3/index.html
+++ b/direction-3/index.html
@@ -9,13 +9,14 @@
 		</head>
 		<body>
 			<header>
-				<nav>
-                    <ol>
+				<nav class="top-nav">
+                    <ol class="left-links">
                         <li><a href="../index.html">Home</a></li>
 						<li><a href="../direction-1/index.html">01</a></li>
                         <li><a href="../direction-2/index.html">02</a></li>
                         <li><a href="../direction-3/index.html">03</a></li>
                     </ol>
+					<p class="nav-title">Color as Experience</p>
                 </nav>
 				<h1>Interaction of Color</h1>
 				<nav>
