--- a/direction-2/index.html
+++ b/direction-2/index.html
@@ -9,7 +9,7 @@
 		</head>
 		<body>
 			<header>
-				<h1>Unifying Title...</h1>
+				<h1>Color as Experience</h1>
 				<nav class="site-nav">
   					<ul class="menu">
     					<li><a href="../index.html">Home</a></li>
