added figures for text 3

--- a/direction-3/index.html
+++ b/direction-3/index.html
@@ -55,43 +55,43 @@
 						<!-- <p>(at left) COLD — WARM (at right)</p> -->
 						<p>though the water is neither of these temperatures, but of another, namely</p>
 						<p class="temperature">LUKEWARM</p>
-						<p>Herewith one experiences a discrepancy between physical fact and psychic effect called, in this case, a haptic illusion — haptic as related to the sense of touch — the haptic sense.</p>
-						<p>In much the same way as haptic sensations deceive us, so optical illusions deceive. They lead us to “see” and to read” other colors than those with which we are confronted physically. </p>
+						<p>Herewith one experiences a discrepancy between physical fact and psychic effect called, in this case, a <span class="terms">haptic illusion</span> — haptic as related to the sense of touch — the haptic sense.</p>
+						<p>In much the same way as haptic sensations deceive us, so <span class="terms">optical illusions</span> deceive. They lead us to “see” and to read” other colors than those with which we are confronted physically. </p>
 						<p>To begin the study of how color deceives and how to make use of this, the first exercise is to make one and the same color look different.</p>
 						<p>On the blackboard and in our notebooks we write:</p>
 						<p  class="lines">Color is the most relative medium in&nbsp;art.</p>
-						<p>Challenging examples of very surprising color changes are shown. Then the class is invited to produce similar effects but is not given reasons or favorable conditions. It starts, therefore, on a trial-and-error basis.</p>
-						<p>Thus, continuing comparison — observation — “thinking in situations” — is promoted, making the class aware that discovery and invention are the criteria of creativeness.</p>
+						<p>Challenging examples of very surprising color changes are shown. Then the class is invited to produce similar effects but is not given reasons or favorable conditions. It starts, therefore, on a <span class="terms">trial-and-error</span> basis.</p>
+						<p>Thus, continuing comparison — observation — “thinking in situations” — is promoted, making the class aware that <span class="terms">discovery</span> and <span class="terms">invention</span> are the criteria of creativeness.</p>
 						<p>As a practical study we ask that 2 small rectangles of the same color and the same size be placed on large grounds of very different color.</p>
-						<p>Soon, these first trials are collected and separated into groups of more and less promise. The class will become aware that change is a result of inthnence. The influencing color is distinguished from the influenced color.</p>
+						<p>Soon, these first trials are collected and separated into groups of more and less promise. The class will become aware that change is a result of <span class="terms">influence</span>. The influencing color is distinguished from the influenced color.</p>
 						<h3>It is discovered that certain colors are hard to change, and that there are others more susceptible to change.</h3>
 						<p>We try to find those colors which are more inclined to exert influence and to distinguish them from those which will accept influence.</p>
-						<p>A second class exhibition of more advanced results should clarify that there are 2 kinds of changing influences working in 2 directions, hight on the one side and hue on the other. And both occur simultaneously — though in varying strength.</p>
+						<p>A second class exhibition of more advanced results should clarify that there are 2 kinds of changing influences working in 2 directions, <span class="terms">light</span> on the one side and <span class="terms">hue</span> on the other. And both occur simultaneously — though in varying strength.</p>
 						<p>Since 2 pieces of the same paper, therefore of the same color, are to appear different — and, if possible, incredibly different — we must compare them under equal conditions. The only colors which are factually different are the large grounds, though they are alike in size and shape. </p>
 						<p>Because of the laboratory character of these studies there is no opportunity to decorate, to illustrate, to represent anything, or to express something — or one's self.</p>
-						<p>Here, successful studies present a denionstration. Since they cannot be misread or misunderstood, they prove understanding both of the principle involved and of the materials to be manipulated.</p>
-						<p>It should be clear that, with these exercises and all others to follow, whether or not we arrive at a pleasant or harmonious color combination is unimportant.</p>
+						<p>Here, successful studies present a demonstration. Since they cannot be misread or misunderstood, they prove understanding both of the <span class="terms">principle</span> involved and of the <span class="terms">materials</span> to be manipulated.</p>
+						<p>It should be clear that, with these exercises and all others to follow, whether or not we arrive at a pleasant or <span class="terms">harmonious</span> color combination is unimportant.</p>
 						<p>Arrangements such as the one shown below disguise the desired effect and lead to confusion:</p>
-						<div class="tilted-grid">
+						<figure class="tilted-grid">
 							<div class="cell"><div class="inner"></div></div>
 							<div class="cell"><div class="inner"></div></div>
 							<div class="cell"><div class="inner"></div></div>
 							<div class="cell"><div class="inner"></div></div>
 							<div class="cell"><div class="inner"></div></div>
 							<div class="cell"><div class="inner"></div></div>
-						</div>
+						</figure>
 						<p>Such studies shown separately in pairs may demonstrate clearly the desired effects. But interlocked in the tile pattern above, their illusional effects annul each other because of:</p>
 							<p class="bullet">a. The simultaneous influence from too many directions — from left and right, and above and below;</p>
 							<p class="bullet">b. The unfavorable distribution of area between the influencing and the influenced color.</p>
 						<p>Consequently, such presentation lacks both sight and insight.</p>
-						<div class="two-cells">
+						<figure class="two-cells">
 							<div class="cell">
 								<div class="inner-rect"></div>
 							</div>
 							<div class="cell">
 								<div class="inner-rect"></div>
 							</div>
-						</div>
+						</figure>
 					</section>
 					
 					<section>
@@ -110,14 +110,27 @@
 						<p>Though there have always been advanced painting students in the basic color class, the result of this test has remained constant for a number of years: 60% of the answers are wrong and only 4o% are right, not counting the undecided cases.</p>
 						<p>By this experience we are led to the next task: To find colors about which we cannot say immediately which is the lighter or darker. These colors are collected and pasted in pairs, and observed again and again until their light-dark relationship is clearly recognized.</p>
 						<p>In cases where a decision seems impossible, an after-image effect may be helpful. 2 color sheets are put on top of each other in this way:</p>
-						<div>
-							<span class="grid-tilted"></span>
-							<span class="grid-tilted"></span>
-							<span class="grid-tilted"></span>
-							<span class="grid-tilted"></span>
-							<span class="grid-tilted"></span>
-							<span class="grid-tilted"></span>
-						</div>
+						<figure class="diamond-diagram">
+							<div class="diamond diamond-left">
+								<span>A</span>
+							</div>
+							<div class="diamond diamond-right">
+								<span>B</span>
+							</div>
+							<div class="arrow"></div>
+						</figure>
+						<figure class="diamond-diagram-2">
+							<div class="diamond left">
+								<span class="label">A</span>
+								<div class="diamond-inner">
+								<span class="label">C</span>
+								</div>
+							</div>
+							<div class="diamond right">
+								<span class="label">B</span>
+							</div>
+							<!-- <figcaption>asdfghjkl</figcaption> -->
+						</figure>
 						<p>Focus longer than the eye wants to on the covering corner (B) of the upper paper and then quickly remove this upper sheet. If area (C) now appears fighter than area (A), then the upper paper is the darker — and vice versa. After this, repeat the experiment with the papers in reverse order. Frequently only 1 of the 2 reversed comparisons reveals the true relationship.</p>
 						<p>The usual results (60% wrong) are disillusioning as well as revealing. Voting for the wrong color often needs cover or compensation; also, the disappointment of wrong answers encourages doubts. The doubts often are directed, not against one's own judgment, but against the competence of the teacher: are his answers the right ones?</p>
 						<p>As the test is to prove whether one has a trained eye or not, the pairs of color presented for discrimination are not easy to decipher. Within the pairs there is no equal light intensity because the conclusive question to be expected from a class is: are there equal light values within these couples?</p>
