--- a/direction-2/index.html
+++ b/direction-2/index.html
@@ -41,7 +41,8 @@
 					<small>Here's why The Daily, Coachella, and Facebook all use backgrounds that look like a sunset.</small>
 				</ol>
 				<div class="sliding-container">
-					<p class="sliding-text">Vaporwave, neon lighting, Bisexual lighting, illusion of dimension, Cyberpunk</p>
+					<p class="sliding-text">vaporwave &#10022; neon lighting &#10022; bisexual lighting &#10022; illusion of dimension &#10022; cyberpunk &#10022;</p>
+					<!-- &#10022; is technically a glyph, not an image @Rijk -->
 				</div>
 				<!-- <a href="#top" class="top">↑</a> -->
 			</header>
