--- a/direction-3/index.html
+++ b/direction-3/index.html
@@ -39,7 +39,7 @@
 							<span>A color has many faces - the relativity of color</span>
 						</h2>
 						<p>Imagine in front of us 3 pots containing water, from left to right:</p>
-						<ol class="lines">
+						<ol class="lines multi-temperature">
 							<li><p>WARM</p></li>
 							<li><p>LUKEWARM</p></li>
 							<li><p>COLD</p></li>
@@ -63,8 +63,10 @@
 						<p>Challenging examples of very surprising color changes are shown. Then the class is invited to produce similar effects but is not given reasons or favorable conditions. It starts, therefore, on a <span class="terms">trial-and-error</span> basis.</p>
 						<p>Thus, continuing comparison — observation — “thinking in situations” — is promoted, making the class aware that <span class="terms">discovery</span> and <span class="terms">invention</span> are the criteria of creativeness.</p>
 						<p>As a practical study we ask that 2 small rectangles of the same color and the same size be placed on large grounds of very different color.</p>
-						<p>Soon, these first trials are collected and separated into groups of more and less promise. The class will become aware that change is a result of <span class="terms">influence</span>. The influencing color is distinguished from the influenced color.</p>
-						<h3>It is discovered that certain colors are hard to change, and that there are others more susceptible to change.</h3>
+						<p>Soon, these first trials are collected and separated into groups of more and less promise.</p>
+						<p class="lines">The class will become aware that change is a result of <span class="terms">influence</span>.</p>
+						<p>The influencing color is distinguished from the influenced color.</p>
+						<p class="lines">It is discovered that certain colors are hard to change, and that there are others more susceptible to change.</p>
 						<p>We try to find those colors which are more inclined to exert influence and to distinguish them from those which will accept influence.</p>
 						<p>A second class exhibition of more advanced results should clarify that there are 2 kinds of changing influences working in 2 directions, <span class="terms">light</span> on the one side and <span class="terms">hue</span> on the other. And both occur simultaneously — though in varying strength.</p>
 						<p>Since 2 pieces of the same paper, therefore of the same color, are to appear different — and, if possible, incredibly different — we must compare them under equal conditions. The only colors which are factually different are the large grounds, though they are alike in size and shape. </p>
@@ -100,16 +102,18 @@
 							<span>Lighter and/or darker — light intensity, lightness</span>
 						</h2>
 						<p>If one is not able to distinguish the difference between a higher tone and a lower tone, one probably should not make music.</p>
-						<p>If a parallel conclusion were to be applied to color, almost everyone would prove incompetent for its proper use. Very few are able to distinguish higher and lower light intensity (usually called higher and lower value) between different hues. This is true despite our daily reading of numerous black-and-white pictures.</p>
+						<p>If a parallel conclusion were to be applied to color, almost everyone would prove incompetent for its proper use.</p>
+						<p class="lines">Very few are able to distinguish higher and lower <span class="terms">light intensity</span> (usually called higher and lower value) between different hues.</p>
+						<p>This is true despite our daily reading of numerous black-and-white pictures.</p>
 						<p>Since the discovery of photography and particularly since the development of photomechanical reproduction processes, we are exposed — more and more every day — to pictures from all over the world, the world seen and unseen, visible and invisible.</p>
 						<p>These pictures, which are predominantly “black and white,” are printed in only 1 black on a white ground. Visually, however, these pictures consist of grey shades of the finest gradations between the poles of black and white. These shades penetrate each other in varying degrees.</p>
 						<p>With the tremendous increase in pictorial information — through newspapers, magazines, books — we receive a training in the reading of lighter and darker tones of grey as has never before existed. With the growing interest in color photography and color reproduction, a parallel training in the reading of lighter and darker color is on the way.</p>
 						<p>However, it is still true that only a minority can distinguish the lighter from the darker within close intervals when obscured by contrasting hues or by different color intensities.</p>
 						<p>In order to correct a prejudice common among painters and designers — that they belong to that minority — we have the students test themselves. We confront them with several pairs of color, from which they are to select and to record which color in a pair is the darker.</p>
 						<p>The darker one, it is explained, is visually the heavier one, or the one containing more black, or less white. It should be mentioned that the students are encouraged to abstain from making a judgment in any case of doubt. It may also demonstrate that not voting can have a positive meaning.</p>
-						<p>Though there have always been advanced painting students in the basic color class, the result of this test has remained constant for a number of years: 60% of the answers are wrong and only 4o% are right, not counting the undecided cases.</p>
-						<p>By this experience we are led to the next task: To find colors about which we cannot say immediately which is the lighter or darker. These colors are collected and pasted in pairs, and observed again and again until their light-dark relationship is clearly recognized.</p>
-						<p>In cases where a decision seems impossible, an after-image effect may be helpful. 2 color sheets are put on top of each other in this way:</p>
+						<p>Though there have always been advanced painting students in the basic color class, the result of this test has remained constant for a number of years: 60% of the answers are wrong and only 40% are right, not counting the undecided cases.</p>
+						<p>By this experience we are led to the next task: To find colors about which we cannot say immediately which is the lighter or darker. These colors are collected and pasted in pairs, and observed again and again until their <span class="terms">light-dark relationship</span> is clearly recognized.</p>
+						<p>In cases where a decision seems impossible, an <span class="terms">after-image</span> effect may be helpful. 2 color sheets are put on top of each other in this way:</p>
 						<figure class="diamond-diagram">
 							<div class="diamond diamond-left">
 								<span>A</span>
@@ -134,26 +138,26 @@
 						<p>Focus longer than the eye wants to on the covering corner (B) of the upper paper and then quickly remove this upper sheet. If area (C) now appears fighter than area (A), then the upper paper is the darker — and vice versa. After this, repeat the experiment with the papers in reverse order. Frequently only 1 of the 2 reversed comparisons reveals the true relationship.</p>
 						<p>The usual results (60% wrong) are disillusioning as well as revealing. Voting for the wrong color often needs cover or compensation; also, the disappointment of wrong answers encourages doubts. The doubts often are directed, not against one's own judgment, but against the competence of the teacher: are his answers the right ones?</p>
 						<p>As the test is to prove whether one has a trained eye or not, the pairs of color presented for discrimination are not easy to decipher. Within the pairs there is no equal light intensity because the conclusive question to be expected from a class is: are there equal light values within these couples?</p>
-						<p>The answer is No.</p>
+						<p class="lines">The answer is No.</p>
 						<p>Another unavoidable question is: will a photograph of these colors reveal their true relationship and thus give the final proof?</p>
-						<p>The answer again is No.</p>
+						<p class="lines">The answer again is No.</p>
 						<p>This answer will remain true for black-and-white as well as color photographs, because the sensitivity and consequently the registration ol the retina of an eye is different from the sensitivity and registration of a photographic film.</p>
 						<p>Normally, black-and-white photography registers all lights lighter and all darks darker than the more adjustable eye perceives them. The eye also distinguishes better the so-called middle greys, which in photography often are flattened if not lost.</p>
 						<p>As an example we showed our class 2 different reproductions of the same Ensor painting, “Masks Contronting Death,” of 1888. The first appeared in the catalogue of an Ensor exhibition, the other in a newspaper report on the same exhibition.</p>
 						<p>The first, the larger and more official reproduction, in very fine screen on coated paper, presumably would be considered more representative than the second, smaller reproduction in a coarser screen and on the cheapest paper.</p>
 						<p>But the latter was not only much more correct in its whole tonality: it also showed clearly 1 more mask, face, or head which the more expensive, so-called high-key reproduction blotted out entirely — a small but complete frontal face, lighter than all the others and separated from them, near the left picture edge.</p>
 						<p>This shows what a higher key in light can lose in photography.</p>
-						<p>The greatest advantage the eye has over photography is its scotopic seeing in addition to its photopic seeing. The former means, briefly, the retinal adjustment to lower light conditions.</p>
+						<p>The greatest advantage the eye has over photography is its <span class="terms">scotopic seeing</span> in addition to its <span class="terms">photopic seeing</span>. The former means, briefly, the retinal adjustment to lower light conditions.</p>
 						<p>Color photography deviates still more from eye vision than black-and-white photography. Blue and red are overemphasized to such an extent that their brightness ts exaggerated. Though this may flatter public taste, the result ts a loss in finer nuances and in delicate relationships. Whites rarely appear white but usually look greenish. This makes color slides of Mondrian paintings unbearable.</p>
 						<p>For practical reasons, certain groups of our color reproductions in the original edition are done in 4-color process which presents subdivided, optically intermixing transparent colors instead of the opaque colors which are characteristic of most of our studies.</p>
 						<h3>Gradation studies — new presentations</h3>
-						<p>With the experience that often we are unsure and thus unable to distinguish between lighter and darker in color, it appears appropriate, even necessary, to develop a more discriminating sensitivity. To this end, we study gradation by producing so-called grey steps, grey scales, grey ladders. These demonstrate a gradual stepping up or down between white and black, between lighter and darker.</p>
+						<p>With the experience that often we are unsure and thus unable to distinguish between lighter and darker in color, it appears appropriate, even necessary, to develop a more discriminating sensitivity. To this end, we study <span class="terms">gradation</span> by producing so-called grey steps, <span class="terms">grey scales</span>, grey ladders. These demonstrate a gradual stepping up or down between white and black, between lighter and darker.</p>
 						<p>For such exercises, we first collect as many greys in paper as possible, and preferably independent of commercial grey sets, which usually offer a too limited choice, or, worse, unequal steps. Rich sources for many paper greys are black-and-white reproductions from popular magazines.</p>
 						<p>Selecting from them smaller and larger areas of as many greys as possible, we will be taught first that photography registers and measures light and dark differently from our eyes. That it turns darks darker and lights lighter means, besides a generalization toward the polar contrasts, a loss of the visually more interesting middle greys. Thus, such reproductions confront us with a dominance of very heavy and very light greys, and a consequent scarcity of middle greys.</p>
 						<p>These cutouts are to be arranged in gradations as described. The softer the steps appear, and the more equal the steps are, the more valuable and convincing the study. As any lines or empty spaces between the steps interfere with a direct comparison, such separating in-betweens prove nonsensical. We also reject the still-recommended but misleading stepping-up of thin layers of water colors or India ink, as explained in Chapter XX. In order to avoid such mistakes, and also any mechanical repetition of the too-familiar illustrations of color books, we aim at a more creative, more challenging, more instructive presentation. Thus we subdivide and mount our grey scales to show new interactions, particularly between graduating and non-graduating greys, and vice versa.</p>
 						<h3>Color intensity — brightness</h3>
 						<p>After the study of “Lighter or Darker” and with some training in gradation studies, one can expect to come to an agreement on different light intensities.</p>
-						<p>However, when it comes to color intensity (brightness), occasionally one may find agreement among a few people but hardly within a large group such as a class.</p>
+						<p>However, when it comes to <span class="terms">color intensity</span> (brightness), occasionally one may find agreement among a few people but hardly within a large group such as a class.</p>
 						<p>As “gentlemen prefer blondes,” so everyone has preference for certain colors and prejndices against others. This applies to color combinations as well. It seems good that we are of different tastes. As it is with people in our daily life. so it is with color. We change, correct, or reverse our opinions about colors, and this change of opinion may shift forth and back.</p>
 						<p>Therefore, we try to recognize our preferences and our aversions — what colors dominate in our work; what colors, on the other hand, are rejected, disliked, or of no appeal. Usually a special effort in using disliked colors ends with our falling in love with them.</p>
 						<p>The exercise in color intensity consists of sorting all possible shades and tints within a hue. From these is chosen the most typical hue (the bluest blue, the greenest green, etc.) and it is placed within the group accordingly. </p>
