--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <title>Binding</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="reset.css" rel="stylesheet">
-		<link href="common.css" rel="stylesheet">
+        <style>
+            @import 'reset.css' layer(reset);
+            @import 'common.css' layer(common);
+        </style>
     </head>
     <body>
         <nav>
