updated links to new htmls

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         <nav>
             <ol>
-                <li><a href="direction-1/index.html">Direction 1</a></li>
-                <li><a href="direction-2/index.html">Direction 2</a></li>
-                <li><a href="direction-3/index.html">Direction 3</a></li>
+                <li><a href="everyday-color-theory/">Direction 1</a></li>
+                <li><a href="gradients/index.html">Direction 2</a></li>
+                <li><a href="interaction-of-color/index.html">Direction 3</a></li>
                 <!-- Dropdown menu tutorial I found on Youtubehttps://www.youtube.com/watch?v=VQWu4e6agPc -->
             </ol>
         </nav>
