added text 1 content

--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -14,9 +14,9 @@
 				<nav class="top-nav">
                     <ol class="left-links">
                         <li><a href="../index.html">Home</a></li>
-						<li><a href="../direction-1/index.html">01</a></li>
-                        <li><a href="../direction-2/index.html">02</a></li>
-                        <li><a href="../direction-3/index.html">03</a></li>
+						<li><a href="../everyday-color-theory/index.html">01</a></li>
+                        <li><a href="../gradients/index.html">02</a></li>
+                        <li><a href="../interaction-of-color/index.html">03</a></li>
                     </ol>
 					<p class="nav-title">Color as Experience</p>
                 </nav>
