--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         <nav>
             <ol>
-                <li><a href="everyday-color-theory/">Direction 1</a></li>
-                <li><a href="gradients/index.html">Direction 2</a></li>
-                <li><a href="interaction-of-color/index.html">Direction 3</a></li>
+                <li><a href="everyday-color-theory/">Everyday Color Theory</a></li>
+                <li><a href="gradients/index.html">Gradients</a></li>
+                <li><a href="interaction-of-color/index.html">Interaction of Color</a></li>
                 <!-- Dropdown menu tutorial I found on Youtubehttps://www.youtube.com/watch?v=VQWu4e6agPc -->
             </ol>
         </nav>
