--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -11,7 +11,7 @@
 		</head>
 		<body>
 			<header>
-				<nav class="top-nav">
+				<nav id="navigation">
                     <ol class="left-links">
                         <li><a href="../index.html">Home</a></li>
 						<li><a href="../everyday-color-theory/index.html">01</a></li>
