updated footer ish not rly

--- a/gradients/index.html
+++ b/gradients/index.html
@@ -128,7 +128,7 @@
 				</article>
 			</main>
 			<footer>
-				<small class="italicize"> Binding |<span class="yellow"> Typography and Interaction </span>| (c) Chareese Lam 2025 </small>
+				<small>Binding | Typography and Interaction | (c) Chareese Lam 2025</small>
 			</footer>
 		</body>
 	</html>
