--- a/everyday-color-theory/index.html
+++ b/everyday-color-theory/index.html
@@ -12,17 +12,17 @@
 		<body>
 			<div class="layout">
 				<nav id="nav">
-					<ol id="nav-links">
-						<li><a href="../index.html">Home</a></li>
-						<li><a href="../everyday-color-theory/index.html">01</a></li>
-						<li><a href="../gradients/index.html">02</a></li>
-						<li><a href="../interaction-of-color/index.html">03</a></li>
-					</ol>
+                    <ol id="nav-links">
+                        <li><a href="../index.html">Home</a></li>
+						<li><a href="../everyday-color-theory/index.html">Perception</a></li>
+                        <li><a href="../gradients/index.html">Transition</a></li>
+                        <li><a href="../interaction-of-color/index.html">Interaction</a></li>
+                    </ol>
 					<p class="nav-title">Color as Experience</p>
-				</nav>
+                </nav>
 				
 				<section class="intro">
-					<h1>Everyday Color Theory</h1>
+					<h1>Everyday <span class="title-sig">Color Theory</span></h1>
 					<ul class="long-subtitle">
 						<li class="subtitle"><p>A poetic crash course on the history of&nbsp;color</p></li>
 						<li class="author"><p>Cortney Cassidy</p></li>
@@ -154,9 +154,9 @@
 						</section>
 					</article>
 				</main>
-				
+
 				<footer id="footer">
-					<small>Binding | Typography and Interaction | (c) Chareese Lam 2025</small>
+					<small>Binding | Typography&nbsp;and&nbsp;Interaction | (c)&nbsp;Chareese&nbsp;Lam&nbsp;2025</small>
 				</footer>
 
 			</div>
