--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -14,15 +14,15 @@
 				<nav id="nav">
                     <ol id="nav-links">
                         <li><a href="../index.html">Home</a></li>
-						<li><a href="../everyday-color-theory/index.html">01</a></li>
-                        <li><a href="../gradients/index.html">02</a></li>
-                        <li><a href="../interaction-of-color/index.html">03</a></li>
+						<li><a href="../everyday-color-theory/index.html">Perception</a></li>
+                        <li><a href="../gradients/index.html">Transition</a></li>
+                        <li><a href="../interaction-of-color/index.html">Interaction</a></li>
                     </ol>
 					<p class="nav-title">Color as Experience</p>
                 </nav>
 
 				<section class="intro">
-					<h1>Interaction of Color</h1>
+					<h1><span class="title-sig">Interaction</span> of Color</h1>
 					<ul class="short-subtitle">
 						<li class="subtitle"><p>Chapter 4-5</p></li>
 						<li class="author"><p>Josef Albers</p></li>
@@ -161,8 +161,8 @@
 					</article>
 				</main>
 
-				<footer>
-					<small>Binding | Typography and Interaction | (c) Chareese Lam 2025</small>
+				<footer id="footer">
+					<small>Binding | Typography&nbsp;and&nbsp;Interaction | (c)&nbsp;Chareese&nbsp;Lam&nbsp;2025</small>
 				</footer>
 
 			</div>
