updated arrow + some spacing

--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -13,10 +13,10 @@
 			<div class="layout">
 				<nav id="nav">
                     <ol id="nav-links">
-                        <li><a href="../index.html">Home</a></li>
-						<li><a href="../everyday-color-theory/index.html">Perception</a></li>
-                        <li><a href="../gradients/index.html">Transition</a></li>
-                        <li><a href="../interaction-of-color/index.html">Interaction</a></li>
+                        <li><a href="../index.html" class="home">Home</a></li>
+						<li><a href="../everyday-color-theory/index.html" class="perception">Perception</a></li>
+                        <li><a href="../interaction-of-color/index.html" class="interaction">Interaction</a></li>
+                        <li><a href="../gradients/index.html" class="transition">Transition</a></li>
                     </ol>
 					<p class="nav-title">Color as Experience</p>
                 </nav>
@@ -32,7 +32,7 @@
 
 				<main class="content">
 					<article>
-						<section>
+						<section class="chapters">
 							<h2>
 								<span class="ch-no">IV</span><br>
 								<span>A color has many faces - the relativity of color</span>
@@ -89,7 +89,7 @@
 							</figure>
 						</section>
 						
-						<section>
+						<section class="chapters">
 							<h2>
 								<span class="ch-no">V</span><br>
 								<span>Lighter and/or darker — light intensity, lightness</span>
@@ -109,10 +109,10 @@
 							<p>In cases where a decision seems impossible, an <span class="terms">after-image</span> effect may be helpful. 2 color sheets are put on top of each other in this way:</p>
 							<figure class="diamond-diagram">
 								<div class="diamond diamond-left">
-									<span>A</span>
+									<span class="label">A</span>
 								</div>
 								<div class="diamond diamond-right">
-									<span>B</span>
+									<span class="label">B</span>
 								</div>
 								<div class="arrow"></div>
 							</figure>
