--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
         </style>
     </head>
     <body>
-        <nav>
-            <ol>
-                <li><a href="everyday-color-theory/">Everyday Color Theory</a></li>
-                <li><a href="gradients/index.html">Gradients</a></li>
-                <li><a href="interaction-of-color/index.html">Interaction of Color</a></li>
-                <!-- Dropdown menu tutorial I found on Youtubehttps://www.youtube.com/watch?v=VQWu4e6agPc -->
-            </ol>
-        </nav>
-        <h1>Binding</h1>
-        <footer>
-            <small>Designed by Chareese Lam ✽</small>
-            <!--https://coolsymbol.com/-->
-        </footer>
+        <div class="layout">
+            <nav id="nav">
+                        <ol id="nav-links">
+                            <li><a href="../index.html" class="home">Home</a></li>
+                            <li><a href="../everyday-color-theory/index.html" class="perception">Perception</a></li>
+                            <li><a href="../interaction-of-color/index.html" class="interaction">Interaction</a></li>
+                            <li><a href="../gradients/index.html" class="transition">Transition</a></li>
+                        </ol>
+                        <p class="nav-title">Color as Experience</p>
+                    </nav>
+            <h1>Binding</h1>
+            <footer>
+                <small>Designed by Chareese Lam ✽</small>
+                <!--https://coolsymbol.com/-->
+            </footer>
+        </div>
     </body>
 </html>
