--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -14,7 +14,7 @@
 				<nav id="nav">
                     <ol id="nav-links">
                         <li><a href="../index.html" class="home">Home</a></li>
-						<li><a href="../everyday-color-theory/index.html" class="perception">Perception</a></li>
+						<li><a redhref="../everyday-color-theory/index.html" class="perception">Perception</a></li>
                         <li><a href="../interaction-of-color/index.html" class="interaction">Interaction</a></li>
                         <li><a href="../gradients/index.html" class="transition">Transition</a></li>
                     </ol>
