--- a/everyday-color-theory/index.html
+++ b/everyday-color-theory/index.html
@@ -13,16 +13,19 @@
 			<div class="layout">
 				<nav id="nav">
                     <ol id="nav-links">
-                        <li><a href="../index.html" class="home">Home</a></li>
-						<li><a href="../everyday-color-theory/index.html" class="perception">Perception</a></li>
-                        <li><a href="../interaction-of-color/index.html" class="interaction">Interaction</a></li>
-                        <li><a href="../gradients/index.html" class="transition">Transition</a></li>
+                        <li><a href="../index.html">Home</a></li>
+						<li><a href="../everyday-color-theory/index.html">Perception</a></li>
+                        <li><a href="../interaction-of-color/index.html">Interaction</a></li>
+                        <li><a href="../gradients/index.html">Transition</a></li>
                     </ol>
 					<p class="nav-title">Color as Experience</p>
                 </nav>
 				
 				<section class="intro">
 					<h1>Everyday <span class="title-sig">Color Theory</span></h1>
+					<div class="interaction">
+						<img class="penrose-triangle" src="/image/penrose-triangle.png" alt="Penrose Triangle">
+					</div>
 					<ul class="meta">
 						<li class="subtitle"><p>A poetic crash course on the history of&nbsp;color</p></li>
 						<li class="author"><p>Cortney Cassidy</p></li>
