--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -13,17 +13,18 @@
 			<div class="layout">
 				<nav id="nav">
                     <ol id="nav-links">
-                        <li><a href="../index.html" class="home">Home</a></li>
-						<li><a redhref="../everyday-color-theory/index.html" class="perception">Perception</a></li>
-                        <li><a href="../interaction-of-color/index.html" class="interaction">Interaction</a></li>
-                        <li><a href="../gradients/index.html" class="transition">Transition</a></li>
+                        <li><a href="../index.html">Home</a></li>
+						<li><a href="../everyday-color-theory/index.html">Perception</a></li>
+                        <li><a href="../interaction-of-color/index.html">Interaction</a></li>
+                        <li><a href="../gradients/index.html">Transition</a></li>
                     </ol>
 					<p class="nav-title">Color as Experience</p>
                 </nav>
 
 				<section class="intro">
 					<h1><span class="title-sig">Interaction</span> of Color</h1>
-					<div class="interaction-demo">
+					<p>Chater 4-5</p>
+					<div class="interaction">
 						<div class="square red"></div>
 						<div class="square yellow"></div>
 					</div>
