--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
                         <ol id="nav-links">
                             <li><a href="../index.html" class="home">Home</a></li>
                             <li>
-                                <div class="interaction">
+                                <!-- <div class="interaction">
                                     <img class="penrose-triangle" src="/image/penrose-triangle.png" alt="Penrose Triangle">
-                                </div>
-                                <a href="../everyday-color-theory/index.html" class="perception">Perception</a>
+                                </div> -->
+                                <a href="./everyday-color-theory/index.html" class="perception">Perception</a>
                             </li>
                             <li>
-                                <div class="interaction">
+                                <!-- <div class="interaction">
 						            <div class="square red"></div>
 						            <div class="square yellow"></div>
-					            </div>
-                                <a href="../interaction-of-color/index.html" class="interaction">Interaction</a>
+					            </div> -->
+                                <a href="./interaction-of-color/index.html" class="interaction">Interaction</a>
                             </li>
-                            <li><a href="../gradients/index.html" class="transition">Transition</a></li>
+                            <li><a href="./gradients/index.html" class="transition">Transition</a></li>
                         </ol>
                         <p class="nav-title">Color as Experience</p>
                     </nav>
