cleaning up + adding content to home

--- a/index.html
+++ b/index.html
@@ -9,28 +9,45 @@
         </style>
     </head>
     <body>
-        <div class="layout">
+        <div class="layout-home">
             <nav id="nav">
                         <ol id="nav-links">
                             <li><a href="../index.html">Home</a></li>
                             <li>
-                                <!-- <div class="interaction">
-                                    <img class="penrose-triangle" src="/image/penrose-triangle.png" alt="Penrose Triangle">
-                                </div> -->
                                 <a href="./everyday-color-theory/index.html">Perception</a>
                             </li>
                             <li>
-                                <!-- <div class="interaction">
-						            <div class="square red"></div>
-						            <div class="square yellow"></div>
-					            </div> -->
                                 <a href="./interaction-of-color/index.html">Interaction</a>
                             </li>
                             <li><a href="./gradients/index.html">Transition</a></li>
                         </ol>
                         <p class="nav-title">Color as Experience</p>
                     </nav>
-            <h1>Binding</h1>
+            <h1>Color as <span class="title-sig experience">Experience</span></h1>
+            
+            <section>
+                <h2>Colophon</h2>
+                <p>aiusdfkjndsaf</p>
+                <ul>
+                    <li>
+                        <!-- <div class="interaction">
+                            <img class="penrose-triangle" src="../image/penrose-triangle.png" alt="Penrose Triangle">
+                        </div> -->
+                        <h1>Everyday Color Theory</h1>
+                    </li>
+                    <li>
+                        <!-- <div class="interaction">
+                            <div class="square red"></div>
+                            <div class="square yellow"></div>
+                        </div> -->
+                        <h1>Interaction of Color</h1>
+                    </li>
+                    <li>
+                        <h1>Gradients</h1>
+                    </li>
+                </ul>
+            </section>
+
             <footer>
                 <small>Designed by Chareese Lam ✽</small>
                 <!--https://coolsymbol.com/-->
