updating image on home

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li>
                         <a class="article-card perception-card" href="./everyday-color-theory/index.html">
                             <div class="interaction">
-                                <img class="penrose-triangle" src="../image/penrose-triangle.png" alt="Penrose Triangle">
+                                <img class="penrose-triangle" src="image/penrose-triangle.png" alt="Penrose Triangle">
                             </div>
                             <div class="meta-home">
                                 <h2>Everyday <span class="title-sig color-theory">Color Theory</span></h2>
