testing light/dark theme

--- a/gradients/index.html
+++ b/gradients/index.html
@@ -19,6 +19,10 @@
                         <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
                     </ol>
 					<p class="nav-title">Color as Experience</p>
+					<label class="switch">
+						<input type="checkbox" id="theme-toggle" />
+						<span class="slider"></span>
+					</label>
                 </nav>
 			
 				<section class="intro">
