still testing light/dark

--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -18,11 +18,13 @@
                         <li><a href="../interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
                         <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
                     </ol>
-					<p class="nav-title">Color as Experience</p>
-					<label class="switch">
-						<input type="checkbox" id="theme-toggle" />
-						<span class="slider"></span>
-					</label>
+					<div class="toggle">
+						<p class="nav-title">Color as Experience</p>
+						<label class="switch">
+							<input type="checkbox" id="theme-toggle" />
+							<span class="slider"></span>
+						</label>
+					</div>
                 </nav>
 
 				<section class="intro">
