updated orange interaction

--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -27,8 +27,8 @@
 						<p id="chapter-no">Chapter 4-5</p>
 					</div>
 					<div class="interaction">
-						<div class="square red"></div>
-						<div class="square yellow"></div>
+						<div class="square dark-orange"></div>
+						<div class="square light-orange"></div>
 					</div>
 					<ul class="meta">
 						<li class="subtitle"><p>A laboratory in how context deceives the eye</p></li>
