revised orange animation

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <li>
                         <a class="article-card interaction-card" href="./interaction-of-color/index.html">
                             <div class="interaction">
-                                <div class="square red"></div>
-                                <div class="square yellow"></div>
+                                <div class="square dark-orange"></div>
+                                <div class="square light-orange"></div>
                             </div>
                             <div class="meta-home">
                                 <h2><span class="title-sig interaction-of-color">Interaction</span> of Color</h2>
