--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -22,14 +22,18 @@
                 </nav>
 
 				<section class="intro">
-					<div id="interaction-meta">
-						<h1 id="interaction-title"><span class="title-sig">Interaction</span> of Color</h1>
-						<p id="chapter-no">Chapter 4-5</p>
-					</div>
 					<div class="interaction">
 						<div class="square dark-orange"></div>
 						<div class="square light-orange"></div>
 					</div>
+					<div id="interaction-meta">
+						<h1 id="interaction-title"><span class="title-sig">Interaction</span> of Color</h1>
+						<p id="chapter-no">Chapter 4-5</p>
+					</div>
+					<!-- <div class="interaction">
+						<div class="square dark-orange"></div>
+						<div class="square light-orange"></div>
+					</div> -->
 					<ul class="meta">
 						<li class="subtitle"><p>A laboratory in how context deceives the eye</p></li>
 						<li class="author">
