too many updates made

--- a/gradients/index.html
+++ b/gradients/index.html
@@ -18,11 +18,14 @@
                         <li><a href="../interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
                         <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
                     </ol>
-					<p class="nav-title">Color as Experience</p>
+					<!-- <p class="nav-title">Color as Experience</p> -->
                 </nav>
 			
 				<section class="intro">
-					<h1><span class="title-sig">Gradients</span></h1>
+					<div class="interaction">
+						<div class="yellow-circle"></div>
+					</div>
+					<h1><span class="yellow-title">Gradients</span></h1>
 					<ul class="meta">
 						<li class="subtitle"><p>The colorful design trend aiming to soothe these anxious times</p></li>
 						<li class="author">
