--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -18,16 +18,16 @@
                         <li><a href="../interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
                         <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
                     </ol>
-					<p class="nav-title">Color as Experience</p>
+					<!-- <p class="nav-title">Color as Experience</p> -->
                 </nav>
 
 				<section class="intro">
 					<div class="interaction">
-						<div class="square dark-orange"></div>
-						<div class="square light-orange"></div>
+						<div class="square square-1"></div>
+						<div class="square square-2"></div>
 					</div>
 					<div id="interaction-meta">
-						<h1 id="interaction-title"><span class="title-sig">Interaction</span> of Color</h1>
+						<h1 id="interaction-title"><span class="orange-title">Interaction</span> <span class="title-sig">of Color</span></h1>
 						<p id="chapter-no">Chapter 4-5</p>
 					</div>
 					<!-- <div class="interaction">
