--- a/everyday-color-theory/index.html
+++ b/everyday-color-theory/index.html
@@ -22,7 +22,7 @@
                 </nav>
 				
 				<section class="intro">
-					<div class="interaction">
+					<div class="shape">
 						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 406.92 351.95" class="penrose-triangle">
 							<g id="Layer_2">
 								<polygon class="cls-4" points="236.57 3 103.54 231.97 170.91 231.97 235.85 118.62 369.19 348.95 403.45 290.4 236.57 3"/>
@@ -178,7 +178,7 @@
 				</main>
 
 				<footer id="footer">
-					<small>Binding | Typography&nbsp;and&nbsp;Interaction | (c)&nbsp;Chareese&nbsp;Lam&nbsp;2025</small>
+					<small>Binding | Typography&nbsp;and&nbsp;Interaction | Designed&nbsp;by&nbsp;Chareese&nbsp;Lam&nbsp;✽</small>
 				</footer>
 
 			</div>
