--- a/gradients/index.html
+++ b/gradients/index.html
@@ -22,7 +22,7 @@
                 </nav>
 			
 				<section class="intro">
-					<div class="interaction">
+					<div class="shape">
 						<div class="yellow-circle"></div>
 					</div>
 					<h1><span class="yellow-title">Gradients</span></h1>
@@ -138,7 +138,7 @@
 				</main>
 
 				<footer id="footer">
-					<small>Binding | Typography&nbsp;and&nbsp;Interaction | (c)&nbsp;Chareese&nbsp;Lam&nbsp;2025</small>
+					<small>Binding | Typography&nbsp;and&nbsp;Interaction | Designed&nbsp;by&nbsp;Chareese&nbsp;Lam&nbsp;✽</small>
 				</footer>
 
 			</div>
