--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -22,7 +22,7 @@
                 </nav>
 
 				<section class="intro">
-					<div class="interaction">
+					<div class="shape">
 						<div class="square square-1"></div>
 						<div class="square square-2"></div>
 					</div>
@@ -30,10 +30,6 @@
 						<h1 id="interaction-title"><span class="orange-title">Interaction</span> <span class="title-sig">of Color</span></h1>
 						<p id="chapter-no">Chapter 4-5</p>
 					</div>
-					<!-- <div class="interaction">
-						<div class="square dark-orange"></div>
-						<div class="square light-orange"></div>
-					</div> -->
 					<ul class="meta">
 						<li class="subtitle"><p>A laboratory in how context deceives the eye</p></li>
 						<li class="author">
@@ -146,7 +142,6 @@
 								<div class="diamond right">
 									<span class="label">B</span>
 								</div>
-								<!-- <figcaption>asdfghjkl</figcaption> -->
 							</figure>
 							
 							<p>Focus longer than the eye wants to on the covering corner (B) of the upper paper and then quickly remove this upper sheet. If area (C) now appears fighter than area (A), then the upper paper is the darker — and vice versa. After this, repeat the experiment with the papers in reverse order. Frequently only 1 of the 2 reversed comparisons reveals the true relationship.</p>
@@ -171,7 +166,7 @@
 				</main>
 
 				<footer id="footer">
-					<small>Binding | Typography&nbsp;and&nbsp;Interaction | (c)&nbsp;Chareese&nbsp;Lam&nbsp;2025</small>
+					<small>Binding | Typography&nbsp;and&nbsp;Interaction | Designed&nbsp;by&nbsp;Chareese&nbsp;Lam&nbsp;✽</small>
 				</footer>
 
 			</div>
