almost done home page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                     <p class="running-text">color as experience</p>
                     <p class="running-text">color as experience</p>
                     <p class="running-text">color as experience</p>
+                    <p class="running-text">color as experience</p>
+                    <p class="running-text">color as experience</p>
+                    <p class="running-text">color as experience</p>
+                    <p class="running-text">color as experience</p>
+                    <p class="running-text">color as experience</p>
                 </div>
             </div>
 
