--- a/interaction-of-color/index.html
+++ b/interaction-of-color/index.html
@@ -18,7 +18,6 @@
                         <li><a href="../interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
                         <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
                     </ol>
-					<!-- <p class="nav-title">Color as Experience</p> -->
                 </nav>
 
 				<section class="intro">
@@ -27,11 +26,11 @@
 						<div class="square square-2"></div>
 					</div>
 					<div class="intro-text-group">
-						<div id="interaction-meta">
-							<h1 id="interaction-title"><span class="orange-title">Interaction</span> <span class="title-sig">of Color</span></h1>
-							<p id="chapter-no">Chapter 4-5</p>
-						</div>
-						<ul class="meta">
+						<h1 id="interaction-title"><span class="orange-title">Interaction</span> <span class="title-sig">of Color</span></h1>
+						<ul id="interaction-meta">
+							<li id="chapter">
+								<p class="meta-details">Chapters</p>
+								<p>4-5</p></li>
 							<li class="subtitle"><p>A laboratory in how context deceives the eye</p></li>
 							<li class="author">
 								<p class="meta-details">Written by</p>
@@ -162,10 +161,18 @@
 							<p>The former means, briefly, the retinal adjustment to lower light conditions.</p>
 							<p>Color photography deviates still more from eye vision than black-and-white photography. Blue and red are overemphasized to such an extent that their brightness ts exaggerated. Though this may flatter public taste, the result ts a loss in finer nuances and in delicate relationships. Whites rarely appear white but usually look greenish. This makes color slides of Mondrian paintings unbearable.</p>
 							<p>For practical reasons, certain groups of our color reproductions in the original edition are done in 4-color process which presents subdivided, optically intermixing transparent colors instead of the opaque colors which are characteristic of most of our studies.</p>
-
 						</section>
 					</article>
 				</main>
+				
+				<nav id="nav-end">
+                    <ol id="nav-links">
+                        <li><a href="../index.html" class="nav-link-home">Home</a></li>
+						<li><a href="../everyday-color-theory/index.html" class="nav-link-perception">Perception</a></li>
+                        <li><a href="../interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
+                        <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
+                    </ol>
+                </nav>
 
 				<footer id="footer">
 					<small>Binding | Typography&nbsp;and&nbsp;Interaction | Designed&nbsp;by&nbsp;Chareese&nbsp;Lam&nbsp;✽</small>
