--- a/everyday-color-theory/index.html
+++ b/everyday-color-theory/index.html
@@ -18,7 +18,6 @@
                         <li><a href="../interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
                         <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
                     </ol>
-					<!-- <p class="nav-title">Color as Experience</p> -->
                 </nav>
 				
 				<section class="intro">
@@ -178,6 +177,15 @@
 						</section>
 					</article>
 				</main>
+
+				<nav id="nav-end">
+                    <ol id="nav-links">
+                        <li><a href="../index.html" class="nav-link-home">Home</a></li>
+						<li><a href="../everyday-color-theory/index.html" class="nav-link-perception">Perception</a></li>
+                        <li><a href="../interaction-of-color/index.html" class="nav-link-interaction">Interaction</a></li>
+                        <li><a href="../gradients/index.html" class="nav-link-transition">Transition</a></li>
+                    </ol>
+                </nav>
 
 				<footer id="footer">
 					<small>Binding | Typography&nbsp;and&nbsp;Interaction | Designed&nbsp;by&nbsp;Chareese&nbsp;Lam&nbsp;✽</small>
